--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,14 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.6)
+
+set(CMAKE_CXX_STANDARD 11)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+
 
 project(proj2)
+
+find_package(Threads REQUIRED)
 
 add_executable(proj2 main.cpp)
 
 install(TARGETS proj2 RUNTIME DESTINATION bin)
+target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads)
