--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(proj2)
 
 find_package(Threads REQUIRED)
 
-add_executable(proj2 main.cpp)
+add_executable(proj2 main.cpp md5.cpp)
 
 install(TARGETS proj2 RUNTIME DESTINATION bin)
 target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads)
